vemo-app/main/default/objects/Config_Loan_Alternative__c/Config_Loan_Alternative__c.object-meta.xml
<CustomObject>
    <label>Program Config - Loan Alternative</label>
    <nameField>
        <displayFormat>LOAN{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Config - Loan Alternatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>