vemo-app/main/default/objects/Config_Loan_Alternative__c/fields/InPaymentInterestRate__c.field-meta.xml
<CustomField>
    <fullName>InPaymentInterestRate__c</fullName>
    <label>In Payment Interest Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>