vemo-app/main/default/objects/Config_Loan_Alternative__c/fields/InSchoolInterestRate__c.field-meta.xml
<CustomField>
    <fullName>InSchoolInterestRate__c</fullName>
    <label>In-School Interest Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>