vemo-app/main/default/objects/Config_Loan_Alternative__c/fields/OriginationFeePercentage__c.field-meta.xml
<CustomField>
    <fullName>OriginationFeePercentage__c</fullName>
    <label>Origination Fee Percentage</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>