vemo-app/main/default/objects/Config_Loan_Alternative__c/fields/ProgramConfig__c.field-meta.xml
<CustomField>
    <fullName>ProgramConfig__c</fullName>
    <label>Program Config</label>
    <referenceTo>Program_Config__c</referenceTo>
    <relationshipLabel>Program Config - Loan Alternatives</relationshipLabel>
    <relationshipName>ConfigLoanAlternatives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>